refactor: S3 연동을 AWS SDK v2로 마이그레이션
spring-cloud-starter-aws:2.2.6.RELEASE 는 Spring Boot 2.2 / Spring Framework 5 시절
아티팩트로, Boot 4 에서 기동 실패를 일으킬 위험이 있어 제거해야 한다. 이 스타터가 끌고 오던
AWS SDK v1(com.amazonaws) 역시 2025-12 로 지원이 종료되었다.

Boot 4.1 업그레이드와 섞이면 실패 원인 분리가 어려워지므로, 아직 정상 동작이 확인된
Boot 3.5.16 상태에서 라이브러리 교체만 먼저 끝낸다.

- S3Config: AmazonS3Client → S3Client (StaticCredentialsProvider + Region)
- S3Service: ObjectMetadata 로 나눠 담던 메타데이터를 PutObjectRequest 빌더로 통합,
  본문은 RequestBody.fromInputStream 으로 전달. URL 조회는 S3Utilities#getUrl 사용
- S3ServiceTest: S3Client/S3Utilities 목으로 교체. 검증 대상(Cache-Control,
  Content-Type, Content-Length)은 그대로 유지했고, deprecated 된 new URL(String) 도 걷어냈다

cloud.aws.* 프로퍼티 키는 @Value 로만 읽으므로 yml 변경은 없다.
runtimeClasspath 에서 com.amazonaws / spring-cloud 가 완전히 사라진 것을 확인했다.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>